tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/match-nonempty-array-forbidden-without-eq.stderr
error: to use a constant of type `B` in a pattern, `B` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-nonempty-array-forbidden-without-eq.rs:16:9
   |
LL |         FOO => { }
   |         ^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralEq.html for details

error[E0004]: non-exhaustive patterns: `[_]` not covered
  --> $DIR/match-nonempty-array-forbidden-without-eq.rs:15:11
   |
LL |     match [B(1)] {
   |           ^^^^^^ pattern `[_]` not covered
   |
   = note: the matched value is of type `[B; 1]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         FOO => { },
LL +         [_] => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
